[gd_scene load_steps=2 format=4 uid="uid://bvj8nqm5qkx4t"]

[ext_resource type="Script" uid="uid://c2ae5s4qgxfxl" path="res://addons/nodetunnel/new_demo/lobby/lobby_list_item.gd" id="1_lobby_item"]

[node name="LobbyListItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 80)
script = ExtResource("1_lobby_item")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="InfoContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lobby Name"
theme_type_variation = &"HeaderLarge"

[node name="ModeLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mode: Deathmatch"

[node name="MapLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Map: Arena"

[node name="PlayersLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Players: 2/4"

[node name="RightContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PasswordLabel" type="Label" parent="MarginContainer/HBoxContainer/RightContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Password"

[node name="JoinButton" type="Button" parent="MarginContainer/HBoxContainer/RightContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Join"
